2004-05-24  Peter Barada  <peter@the-baradas.com>

	* gas/m68k/mcf-emac.d: Provide correct disassembler results.
	* gas/m68k/mcf-mac.d: Provide correct disassembler results.

2004-05-20  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/ia64/dv-srlz.d: Fix a typo.

2004-05-12  Ben Elliston  <bje@au.ibm.com>

	* gas/h8300/t03_add.exp: Remove stray semicolons.
	* gas/h8300/t04_sub.exp: Likewise.
	* gas/h8300/t05_cmp.exp: Likewise.
	* gas/h8300/t08_or.exp: Likewise.
	* gas/h8300/t09_xor.exp: Likewise.
	* gas/h8300/t10_and.exp: Likewise.
	* gas/hppa/reloc/reloc.exp: Likewise.
	* gas/hppa/unsorted/unsorted.exp: Likewise.
	* gas/i386/i386.exp: Likewise.
	* gas/m68hc11/m68hc11.exp: Likewise.
	* gas/mips/mips.exp: Likewise.
	* gas/sparc/sparc.exp: Likewise.
	* lib/gas-defs.exp: Likewise.

2004-05-11  Nick Clifton  <nickc@redhat.com>

	* gas/elf/section4.s: New test.  Checks label arithmetic when
	multiple same-name sections exist.
	* gas/elf/section4.d: New file: Expected section list
	* gas/elf/elf.exp: Run the new test.
	* gas/elf/group0.s: Use % instead of @ for type argument to
	.section directive (for compatability with ARM port).
	* gas/elf/group1.s: Likewise.

2004-05-07  Richard Sandiford  <rsandifo@redhat.com>

	* gas/mips/vr4122.[sd]: Rename to...
	* gas/mips/vr4120-2.[sd]: ...and add tests for VR4181A errata
	MD(1) and MD(4).
	* gas/mips/mips.exp: Update accordingly.

2004-05-05  Alexandre Oliva  <aoliva@redhat.com>

	* gas/frv/reloc1.d: Match elf32-frvfdpic as well.
	* gas/frv/fr405-insn.d: Likewise.
	* gas/frv/fr450-insn.d: Likewise.

2004-04-30  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/elf/elf.exp: Remove group1, add group1a and group1b for
	section group.

	* gas/elf/group1a.d: New file.
	* gas/elf/group1b.d: Likewise.

	* gas/elf/group1.e: Removed.

2004-04-30  Nick Clifton  <nickc@redhat.com>

	* gas/arm/reg-alias.s: New file: Test case sensitive register
	aliases.
	* gas/arm/reg-alias.d: New file: Expected test output.
	* gas/arm/arm.exp: Run reg-alias test.