@@ -40,6 +40,8 @@ if [istarget "ia64-*"] then {
     run_list_test "ldxmov-2" ""
     run_dump_test "ltoff22x-1"
     
+    run_list_test "invalid-ar" ""
+
     run_dump_test "dependency-1"
 
     run_dump_test "real"
